--- a/src/block-frontend/src/components/SideBar/css/Header.css
+++ b/src/block-frontend/src/components/SideBar/css/Header.css
@@ -172,7 +172,7 @@
     width: 35px;
     height: 35px;
     position: absolute;
-    top: 44px;
+    top: 15px;
     left: 20px;
     color: #fff;
     background: linear-gradient(224.09deg, rgba(61, 71, 106, 0.45) 0%, rgba(61, 71, 106, 0.49) 98.47%);
